acctpy_PYTHON = \
	__init__.py \
	user_subcommands.py \
	bank_subcommands.py \
	queue_subcommands.py \
	project_subcommands.py \
	job_usage_calculation.py \
	jobs_table_subcommands.py \
	db_info_subcommands.py \
	create_db.py \
	formatter.py \
	sql_util.py \
	priorities.py

clean-local:
	-rm -f *.pyc *.pyo
	-rm -rf __pycache__
